js file updated
Signed-off-by: Julio Bell <juliobell2014@gmail.com>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,10 @@ h1 {
     width: 100%;
   }
 
+  #image {
+    max-width: 250px;
+    margin-right: 50px;
+  }
   /* #startBtn {
     position: relative;
     top: 200px; 
