--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,8 @@
 .contentHolder	{
     width:100%;
     height: 91vh;
-    background-color: white;
+    /* background-color: white; */
+    background-color: rgb(253, 255, 255);
     border: 1px solid grey; 
     margin:0 auto;
 }
